--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ description: > # this means to ignore newlines until "baseurl:"
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://aranibatta.github.io" # the base hostname & protocol for your site
-twitter_username: @aranibatta
+twitter_username: aranibatta
 github_username:  aranibatta
 
 # Build settings
