--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: arani(ron)[bhatta]charyay
+title: arani (ron bhatta)charyay
 email: aranibatta@berkeley.edu
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
@@ -16,7 +16,9 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://aranibatta.github.io" # the base hostname & protocol for your site
 twitter_username: aranibatta
 github_username:  aranibatta
-
+safe:        true
+lsi:         false
+highlighter: pygments
 # Build settings
 markdown: kramdown
 webrick:
