--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,8 @@
 
 # Site settings
 title: arani (ron bhatta)charyay
-email: aranibatta@berkeley.edu
+name: arani bhattacharyay
+email: arani@arani.io
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
