--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 title: arani (ron bhatta)charyay
 name: arani bhattacharyay
 email: arani@arani.io
-description: > # this means to ignore newlines until "baseurl:"
+description:  # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
