--- a/_config.yml
+++ b/_config.yml
@@ -10,9 +10,7 @@ title: arani (ron bhatta)charyay
 name: arani bhattacharyay
 email: arani@arani.io
 description:  # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description. &copy 2016
+  personal Homepage of ron bhatta. You are here to laugh at my bio, stalk my professional history, or fall asleep to some of my musings. &copy Arani Bhattacharyay 2016
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://aranibatta.github.io" # the base hostname & protocol for your site
 twitter_username: aranibatta
