--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ safe:        true
 lsi:         false
 highlighter: rouge
 # Build settings
-markdown: kramdown
+markdown: redcarpet
 webrick:
   headers:
     My-Header: Arani
