--- a/_config.yml
+++ b/_config.yml
@@ -1,29 +1,40 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely need to edit after that.
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'jekyll serve'. If you change this file, please restart the server process.
-
 # Site settings
 title: arani (ron bhatta)charyay
 name: arani bhattacharyay
 email: arani@arani.io
 description:  # this means to ignore newlines until "baseurl:"
   personal homepage of ron bhatta, or arani, whichever you want. you are here to laugh at my bio, stalk my professional history, or fall asleep to some of my musings. &copy 2016 
+### exclude the instructions / write-up in the README.md
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://aranibatta.github.io" # the base hostname & protocol for your site
+url: "http://aranibatta.github.io" 
 twitter_username: aranibatta
 github_username:  aranibatta
 facebook_username:
-medium_username:
-safe:        true
-lsi:         false
+
+# Tracker
+analytics: UA-83979019-1
+
+#optimization
+#compress.html
+compress_html:
+  clippings: [html,div, p, ul, td, h1, h2, h3, h4,link, meta, footer, nav, img, header, hr, br, head, style, li, ul, ol, time, main, script, title]
+  comments: ["<!-- ", " -->"]
+  endings: [all]
+  ignore:
+    envs: [local]
+  blanklines: false
+  profile: false
+  startings: []
+  
 highlighter: rouge
 # Build settings
 markdown: kramdown
-webrick:
-  headers:
-    My-Header: Arani
-    My-Other-Header: Bhattacharyay
 
+sass:
+ style: compressed
+
+exclude:
+- README.md
+
+
+gems: [jekyll-seo-tag, jekyll-paginate]
